<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="icon_toolbar_add_realestate">Add a real estate</string>
    <string name="notification_name">notification_add</string>
    <string name="notification_description">react_to_add</string>
    <string name="notification_title">Real Estate Manager</string>
    <string name="notification_message">You\'ve added a new real estate in database !</string>

    <!-- NAVIGATION DRAWER -->
    <string name="all_real_estate">All real estate</string>
    <string name="real_estate_around">Map</string>
    <string name="settings">Settings</string>
    <string name="disconnect">Disconnect</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- REAL ESTATE DETAILS -->
    <string name="description_detail">Description</string>
    <string name="button_more">Show address</string>
    <string name="button_close">..close</string>
    <string name="real_estate_surface">%dm²</string>
    <string name="real_estate_room">%d room(s)</string>
    <string name="real_estate_agent">Agent : %s</string>
    <string name="real_estate_location">%s</string>
    <string name="real_estate_starting_date">Up for sale : %s</string>
    <string name="real_estate_not_sold">Not sold yet</string>
    <string name="real_estate_sold">Sold : %s</string>
    <string name="point_of_interest">Points of interests : %s</string>
    <string name="real_estate_price">Price : %d%s</string>
    <string name="real_estate_price_dollar">$</string>
    <string name="real_estate_price_euro">€</string>
    <string name="modify_button">Update</string>
    <string name="sold_button">Status</string>
    <string name="simul_button">Simulation</string>
    <string name="type_button">TYPE</string>
    <string name="price_button">PRICE</string>

    <!-- ADD REAL ESTATE ACTIVITY -->
    <string name="surface_button">SURFACE</string>
    <string name="rooms_button">ROOMS</string>
    <string name="location_button">LOCATION</string>
    <string name="photo_from_device">GET PHOTOS FROM DEVICE</string>
    <string name="take_photo">TAKE PHOTO</string>
    <string name="description">DESCRIPTION</string>
    <string name="points_of_interest">POINTS OF INTEREST</string>
    <string name="hint_int">0</string>
    <string name="hint_location">Enter address here</string>
    <string name="hint_description">Enter a description here</string>
    <string name="hint_interest">Make your choice</string>
    <string name="snack_bar_no_photo">You\'ve didn\'t picked any photos</string>
    <string name="number_of_photo">%s photo(s) picked</string>
    <string name="no_photo">You\'ve didn\'t take photo</string>
    <string name="conditions">At least one photo and a description needed</string>
    <string name="text_add_realestate">Welcome %s ! You can add or modify a real estate in
        database by choosing at least one photo and a description.</string>
    <string name="sign_up">SIGNUP</string>
    <string name="login">LOGIN</string>

    <!-- LOGIN ACTIVITY -->
    <string name="cancel_registration">Registration has been canceled</string>
    <string name="registration_success">Registration succeeded, you can now log in</string>
    <string name="sign_in">SIGN IN</string>
    <string name="error">Wrong user !</string>

    <!-- SIGNIN ACTIVITY -->
    <string name="register">REGISTER</string>
    <string name="hint_username">USERNAME</string>

    <!-- REGISTER ACTIVITY -->
    <string name="hint_email">EMAIL ADDRESS</string>
    <string name="hint_password">PASSWORD</string>
    <string name="hint_photo">CHOOSE A PHOTO</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="credit_title">LOAN SIMULATOR</string>

    <!-- PREFERENCES ACTIVITY -->
    <string name="credit_real_estate_cost">Real Estate price :</string>
    <string name="contribution">Contribution :</string>
    <string name="rate">Rate :</string>
    <string name="years">Years :</string>
    <string name="btn_submit">SUBMIT</string>

    <!-- CREDIT SIMULATOR -->
    <string name="result_loan_simulator">Total cost : %s, monthly : %s</string>
    <string name="fields_error">Please fill all fields !</string>
    <string name="toolbar_title_search">Search Real Estate</string>

    <string-array name="listArray">
        <item>Dollars</item>
        <item>Euros</item>
    </string-array>
    <string-array name="listValues">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="type_list">
        <item>Loft</item>
        <item>House</item>
        <item>Castle</item>
        <item>Appartement</item>
    </string-array>
    <string-array name="interest_list">
        <item>School</item>
        <item>Shops</item>
        <item>Parking</item>
        <item>Gas station</item>
        <item>Mall</item>
        <item>Town hall</item>
        <item>Play area</item>
    </string-array>

    <!--SEARCH ACTIVITY-->
    <string name="type_list">Type :</string>
    <string name="cost_from">Price from :</string>
    <string name="cost_to">to :</string>
    <string name="hint_input_from">Start Value</string>
    <string name="hint_input_to">End Value</string>
    <string name="rooms_input">Minimum number of rooms :</string>
    <string name="hint_input_rooms">Min rooms</string>
    <string name="area_input_from">Area from:</string>
    <string name="area_input_to">to:</string>
    <string name="hint_area">Area</string>

</resources>
