<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".controllers.CreditSimulatorActivity">

    <android.support.design.widget.CoordinatorLayout
    android:id="@+id/coordinator_loan_simulator"
    android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color_gradient">

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="@dimen/btn_submit_width"
        android:layout_height="@dimen/btn_height"
        android:background="@drawable/btn_rounded"
        android:text="@string/btn_submit"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@id/result_under_submit_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/years_container" />

    <EditText
        android:id="@+id/price_container"
        android:layout_width="0dp"
        android:layout_height="@dimen/edittext_height"
        android:layout_margin="@dimen/margin_to_border"
        android:inputType="number"
        android:background="@drawable/btn_rounded_empty"
        android:paddingLeft="@dimen/margin_to_border"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toBottomOf="@id/price"
        app:layout_constraintLeft_toRightOf="@id/price"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/price" />

    <EditText
        android:id="@+id/contribution_container"
        android:inputType="number"
        android:layout_width="0dp"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginRight="@dimen/margin_to_border"
        android:background="@drawable/btn_rounded_empty"
        android:paddingLeft="@dimen/margin_to_border"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toBottomOf="@id/contribution"
        app:layout_constraintLeft_toLeftOf="@id/price_container"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/contribution" />

    <EditText
        android:id="@+id/rate_container"
        android:layout_width="0dp"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginRight="@dimen/margin_to_border"
        android:background="@drawable/btn_rounded_empty"
        android:inputType="numberDecimal"
        android:paddingLeft="@dimen/margin_to_border"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toBottomOf="@id/rate"
        app:layout_constraintLeft_toLeftOf="@id/price_container"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/rate" />

    <EditText
        android:id="@+id/years_container"
        android:layout_width="0dp"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginRight="@dimen/margin_to_border"
        android:background="@drawable/btn_rounded_empty"
        android:paddingLeft="@dimen/margin_to_border"
        android:textColor="@color/primaryTextColor"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@id/years"
        app:layout_constraintLeft_toLeftOf="@id/price_container"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/years" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/logo_dimension_loan"
        android:layout_height="@dimen/logo_dimension_loan"
        android:layout_marginTop="@dimen/margin_to_border"
        android:src="@drawable/background_start"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/credit_title_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_to_border"
        android:layout_marginBottom="@dimen/margin_to_border"
        android:text="@string/credit_title"
        android:textSize="@dimen/title_font_size"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_to_border"
        android:layout_marginTop="@dimen/margin_to_border"
        android:text="@string/credit_real_estate_cost"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/price_container"
        app:layout_constraintTop_toBottomOf="@id/credit_title_container" />

    <TextView
        android:id="@+id/contribution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_to_border"
        android:layout_marginTop="@dimen/space_between_fields"
        android:text="@string/contribution"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price" />

    <TextView
        android:id="@+id/rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_to_border"
        android:layout_marginTop="@dimen/space_between_fields"
        android:text="@string/rate"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contribution" />

    <TextView
        android:id="@+id/years"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_to_border"
        android:layout_marginTop="@dimen/space_between_fields"
        android:text="@string/years"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rate" />

    <TextView
        android:id="@+id/result_under_submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_loan_simulator"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/btn_submit" />

</android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>
</ScrollView>