<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color_gradient"
    tools:context=".login.RegisterActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/logo_dimensions"
        android:layout_height="@dimen/logo_dimensions"
        android:layout_marginTop="@dimen/margin_to_border"
        android:padding="@dimen/margin_to_border"
        android:src="@drawable/background_start"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutUsername"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:id="@+id/username_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_to_border"
        android:layout_marginTop="@dimen/margin_to_border"
        android:layout_marginEnd="@dimen/margin_to_border"
        android:src="@drawable/pngtree_users_vector_icon_png_image_3725294"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutUsername"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/textInputLayoutUsername"
        app:layout_constraintTop_toTopOf="@id/textInputLayoutUsername"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutUsername"
        android:layout_width="@dimen/edittext_width"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_to_border"
        android:background="@null"
        android:textColorHint="@color/primaryTextColor"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutEmail"
        app:layout_constraintLeft_toRightOf="@id/username_logo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded_empty"
            android:hint="@string/hint_username"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="@dimen/horizontal_padding_edittext"
            android:paddingTop="@dimen/top_padding_edittext"
            android:paddingBottom="@dimen/bottom_padding_edittext"
            android:textColor="@android:color/white"/>
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/mail_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_to_border"
        android:layout_marginTop="@dimen/margin_to_border"
        android:layout_marginEnd="@dimen/margin_to_border"
        android:src="@drawable/white_email_icon_png_1508241"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutEmail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/textInputLayoutEmail"
        app:layout_constraintTop_toTopOf="@id/textInputLayoutEmail"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="@dimen/edittext_width"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_to_border"
        android:background="@null"
        android:textColorHint="@color/primaryTextColor"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutPhoto"
        app:layout_constraintLeft_toRightOf="@id/mail_logo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutUsername">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded_empty"
            android:hint="@string/hint_email"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="@dimen/horizontal_padding_edittext"
            android:paddingTop="@dimen/top_padding_edittext"
            android:paddingBottom="@dimen/bottom_padding_edittext"
            android:textColor="@android:color/white"/>
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/photo_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_to_border"
        android:layout_marginTop="@dimen/margin_to_border"
        android:layout_marginEnd="@dimen/margin_to_border"
        android:padding="2dp"
        android:src="@drawable/photo_white_icon"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutPhoto"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/textInputLayoutPhoto"
        app:layout_constraintTop_toTopOf="@id/textInputLayoutPhoto"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutPhoto"
        android:layout_width="@dimen/edittext_width"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_to_border"
        android:background="@null"
        android:textColorHint="@color/primaryTextColor"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutMdp"
        app:layout_constraintLeft_toRightOf="@id/photo_logo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutEmail">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditTextPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded_empty"
            android:hint="@string/hint_photo"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="@dimen/horizontal_padding_edittext"
            android:paddingTop="@dimen/top_padding_edittext"
            android:paddingBottom="@dimen/bottom_padding_edittext"
            android:textColor="@android:color/white"/>
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/password_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_to_border"
        android:layout_marginTop="@dimen/margin_to_border"
        android:layout_marginEnd="@dimen/margin_to_border"
        android:layout_marginBottom="@dimen/margin_to_border"
        android:padding="4dp"
        android:src="@drawable/white_lock_icon"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutMdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/textInputLayoutMdp"
        app:layout_constraintTop_toTopOf="@id/textInputLayoutMdp"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutMdp"
        android:layout_width="@dimen/edittext_width"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_to_border"
        android:layout_marginBottom="@dimen/margin_to_border"
        android:background="@null"
        android:textColorHint="@color/primaryTextColor"
        app:helperText="at least 8 characters"
        app:helperTextEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/register_btn"
        app:layout_constraintLeft_toRightOf="@id/password_logo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutPhoto">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditTextMdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded_empty"
            android:hint="@string/hint_password"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="@dimen/horizontal_padding_edittext"
            android:paddingTop="@dimen/top_padding_edittext"
            android:paddingBottom="@dimen/bottom_padding_edittext"
            android:textColor="@android:color/white"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bottom_margin"
        android:background="@drawable/btn_rounded"
        android:text="@string/register"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutMdp"/>

</android.support.constraint.ConstraintLayout>